# superscale

./: .cursorrules  .gitignore  CLAUDE.md  Dockerfile  LICENSE-3rdparty.md  README.md  pyproject.toml  superscale_detailed_implementation_strategy.md  superscale_implementation_plan.md  test_superscale.py
scripts/: sync_models.py
superscale/: __init__.py
superscale/api/: pipeline.py
superscale/backends/native/hitsr/: __init__.py
superscale/backends/native/hitsr/basicsr/archs/: hit_sir_arch.py  hit_sng_arch.py  hit_srf_arch.py
superscale/backends/native/hitsr/basicsr/utils/: logger.py
superscale/backends/native/tsdsr/: __init__.py
superscale/backends/native/tsdsr/utils/: vaehook.py
superscale/cli/: main.py
superscale/core/: base_upscaler.py  cache_manager.py  model_manager.py  registry.py  utils.py
superscale/models/dummy/: __init__.py  adapter.py
superscale/models/hitsr/: adapter.py
superscale/models/tsdsr/: README.md  __init__.py  __main__.py  adapter.py  download.py  download_auto.py  download_gdrive.py  gdrive_config.py
superscale/utils/: __init__.py  download_utils.py
tests/: __init__.py  test_basic.py
